# galactic-menu-rag

./: README.md  pyproject.toml  test_search.py
.debug/: Anima Cosmica.json  Armonia Universale.json  Cosmica Essenza.json  Datapizza.json  Eco di Pandora.json  Eredita Galattica.json  Essenza dell Infinito.json  Il Firmamento.json  L Architetto dell Universo.json  L Eco dei Sapori.json  L Equilibrio Quantico.json  L Essenza Cosmica.json  L Essenza del Multiverso su Pandora.json  L Essenza delle Dune.json  L Essenza di Asgard.json  L Etere del Gusto.json  L Oasi delle Dune Stellari.json  L Universo in Cucina.json  L infinito in un Boccone.json  Le Dimensioni del Gusto.json  Le Stelle Danzanti.json  Le Stelle che Ballano.json  Ristorante Quantico.json  Ristorante delle Dune Stellari.json  Sala del Valhalla.json  Sapore del Dune.json  Stelle Astrofisiche.json  Stelle dell Infinito Celestiale.json  Tutti a TARSvola.json  Universo Gastronomico di Namecc.json  retrieval_results.json
.output/: prova.csv  risposte_easy.csv  risultati.csv  risultati_easy.csv
Dataset/: domande.csv
Dataset/ground_truth/: ground_truth_mapped.csv
qdrant_storage/: raft_state.json
qdrant_storage/collections/galactic_menu/: config.json
qdrant_storage/collections/galactic_menu/0/: newest_clocks.json  replica_state.json
src/: main.py
src/ingestion/: parsers.py  pipeline.py
src/models/: dish.py
src/retrieval/: engines.py  filter.py  pipeline.py  query_filter.py
src/utils/: config.py  prompts.py
(+6 files in other folders)
